cambios en las secciones new in y galería

--- a/galeria.html
+++ b/galeria.html
@@ -23,7 +23,6 @@
 </head>
 
 <body>
-
 <!--menú de navegación-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> 
 
@@ -35,7 +34,6 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarNav">
-
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="sobre_mi.html">SOBRE MI</a>
@@ -65,7 +63,6 @@
             <div>
                 <a href=""><img src="MULTIMEDIA/IMG/HOME/carrito.png" alt="ícono carrito"></a>
             </div>
-            
         </div>
     </div>
 </nav>
@@ -75,24 +72,49 @@
         <h1>GALERÍA</h1>
     </div>
 
-    <div class="seccion__galeria--container"> 
+    <div class="container-fluid p-0">
+        <div class="row g-0">
 
-        <div class="valor1"><img src="MULTIMEDIA/IMG/GALERÍA/01.jpeg" alt="imagen de prueba"></div>
+            <div class="col-lg-4 col-sm-6 seccion__galeria--grid">
+                <a class="portfolio-box" href="">
+                    <img class="img-fluid" src="MULTIMEDIA/IMG/GALERÍA/01.jpeg" alt="imagen de prueba"/>
+                </a>
+            </div>
 
-        <div class="valor2"><img src="MULTIMEDIA/IMG/GALERÍA/04.jpeg" alt="imagen de prueba"></div>
+            <div class="col-lg-4 col-sm-6 seccion__galeria--grid">
+                <a class="portfolio-box" href="">
+                    <video src="MULTIMEDIA/VIDEO/GALERÍA/allyouneedislove.mp4" autoplay loop></video>
+                </a>
+            </div>
 
-        <div class="valor3"><img src="MULTIMEDIA/IMG/GALERÍA/02.jpeg" alt="imagen de prueba"></div>
+            <div class="col-lg-4 col-sm-6 seccion__galeria--grid">
+                <a class="portfolio-box" href="">
+                    <img class="img-fluid" src="MULTIMEDIA/IMG/GALERÍA/01.jpeg" alt="imagen de prueba"/>
+                </a>
+            </div>
 
-        <div class="valor4"><video src="MULTIMEDIA/VIDEO/GALERÍA/allyouneedislove.mp4" autoplay loop></video></div>
+            <div class="col-lg-4 col-sm-6 seccion__galeria--grid">
+                <a class="portfolio-box" href="">
+                    <video src="MULTIMEDIA/VIDEO/GALERÍA/allyouneedislove.mp4" autoplay loop></video>
+                </a>
+            </div>
 
-        <div class="valor5"><img src="MULTIMEDIA/IMG/GALERÍA/01.jpeg" alt="imagen de prueba"></div>
+            <div class="col-lg-4 col-sm-6 seccion__galeria--grid">
+                <a class="portfolio-box" href="">
+                    <img class="img-fluid" src="MULTIMEDIA/IMG/GALERÍA/01.jpeg" alt="imagen de prueba"/>
+                </a>
+            </div>
 
-        <div class="valor6"><img src="MULTIMEDIA/IMG/GALERÍA/02.jpeg" alt="imagen de prueba"></div>
-
+            <div class="col-lg-4 col-sm-6 seccion__galeria--grid">
+                <a class="portfolio-box" href="">
+                    <video src="MULTIMEDIA/VIDEO/GALERÍA/allyouneedislove.mp4" autoplay loop></video>
+                </a>
+            </div>
+            
+        </div>
     </div>
 
     <footer>
-
         <!--enlaces de contacto-->
         <div>
             <div>
